Update Wifi (Available Devices) demo code to display detailed network information and handle location permission requests; add missing image asset.

--- a/Units/CSE227/5/3.md
+++ b/Units/CSE227/5/3.md
@@ -1,5 +1,5 @@
 # Wifi (Available Devices)
-![alt text](<WhatsApp Image 2025-04-16 at 13.52.08_1db3fa85.jpg>)
+![alt text](image.png)
 
 ## XML Code
 
@@ -146,12 +146,36 @@ class MainActivity : AppCompatActivity() {
     }
 
     private fun displayWifiNetworks(scanResults: List<ScanResult>) {
-        // Extract SSIDs from the scan results
-        val wifiNetworks = scanResults.map { it.SSID }.filter { it.isNotEmpty() }
+        val list = ArrayList<String>()
+        if (scanResults.isNotEmpty()) {
+            for (scanResult in scanResults) {
+                val ssid = scanResult.SSID
+                val bssid = scanResult.BSSID
+                val level = scanResult.level
+                list.add("SSID: $ssid, BSSID: $bssid, Level: $level")
+            }
+            adapter = ArrayAdapter(this, android.R.layout.simple_list_item_1, list)
+            listView.adapter = adapter
+        }
+        else{
+            Toast.makeText(this, "No Wifi Networks Found", Toast.LENGTH_SHORT).show()
+        }
+    }
 
-        // Display the SSIDs in the ListView
-        adapter = ArrayAdapter(this, android.R.layout.simple_list_item_1, wifiNetworks)
-        listView.adapter = adapter
+    override fun onRequestPermissionsResult(
+        requestCode: Int,
+        permissions: Array<out String>,
+        grantResults: IntArray
+    ) {
+        super.onRequestPermissionsResult(requestCode, permissions, grantResults)
+        if(requestCode == REQUEST_CODE_LOCATION_PERMISSION){
+            if(grantResults.isNotEmpty() && grantResults[0] == PackageManager.PERMISSION_GRANTED){
+                Toast.makeText(this, "Permission Granted", Toast.LENGTH_SHORT).show()
+            }
+            else{
+                Toast.makeText(this, "Location Permission is required", Toast.LENGTH_SHORT).show()
+            }
+        }
     }
 }
 ```
