--- a/Units/CSE227/5/4.md
+++ b/Units/CSE227/5/4.md
@@ -127,40 +127,19 @@ class WifiSpeedTest : AppCompatActivity() {
     }
 
     private fun testDownloadSpeed(urlString: String) {
-        speedTextView.text = "Testing speed..."
-        Thread{
-            try{
-                val url = URL(urlString)
-                val connection = url.openConnection() as HttpURLConnection
-                connection.connectTimeout = 5000
-                connection.readTimeout = 5000
-                connection.connect()
-                val inputStream = connection.inputStream
-                val buffer = ByteArray(1024*1024)
-                var totalBytesRead = 0
-                val startTime = System.currentTimeMillis()
-                while(true){
-                    val bytesRead = inputStream.read(buffer)
-                    if(bytesRead == -1){
-                        break
-                    }
-                    totalBytesRead += bytesRead
-                }
-                val endTime = System.currentTimeMillis()
-                val duration = (endTime - startTime) / 1000.0
-                val downloadSpeed = (totalBytesRead*8.0) / (duration*1024*1024)
-                runOnUiThread{
-                    speedTextView.text = "Download Speed: ${"%.2f".format(downloadSpeed)} Mbps"
-                }
-                inputStream.close()
-                connection.disconnect()
+    speedTextView.text = "Testing speed..."
+    Thread {
+        try {
+            val start = System.currentTimeMillis()
+            val bytes = URL(urlString).openStream().readBytes().size
+            val duration = (System.currentTimeMillis() - start) / 1000.0
+            val speed = (bytes * 8) / (duration * 1024 * 1024)
+            runOnUiThread {
+                speedTextView.text = "Download Speed: %.2f Mbps".format(speed)
             }
-            catch(_: Exception){
-                runOnUiThread{
-                    speedTextView.text = "Error testing speed"
-                }
-            }
-        }.start()
-    }
+        } catch (_: Exception) {
+            runOnUiThread { speedTextView.text = "Error testing speed" }
+        }
+    }.start()
 }
 ```
